// Copyright (c) Aalyria Technologies, Inc., and its affiliates.
// Confidential and Proprietary. All rights reserved.

syntax = "proto2";

package minkowski.proto;

import "api/common/coordinates.proto";
import "google/protobuf/timestamp.proto";

option go_package = "aalyria.com/minkowski/api/nbi";
option java_package = "com.aalyria.minkowski.proto";

message ComputedMotion {
  // The metadata that identifies the `MotionDefinition` entity that is
  // used as the basis for the computed motion data in this message.
  message ReferenceMotion {
    // The string ID of the source `MotionDefinition` entity.
    optional string motion_ref_id = 1;
    // Commit timestamp of the source `MotionDefinition` entity.
    optional google.protobuf.Timestamp commit_timestamp = 2;
  }
  optional ReferenceMotion reference = 1;

  // Holds `Motion` messages that may be more useful to internal consumers.
  // These include trajectory descriptions that have been converted from
  // another description type, e.g.:
  //
  //   * `PointAxesTemporalInterpolation` waypoints resulting from propogation
  //      of a `StateVector` under an assumed set of forces, or
  //
  //   * an extrapolation of waypoints for platforms moving on fixed or
  //     slowly varying headings (e.g. ships, planes, balloons, etc with
  //     motion reported via relay of AIS or ADS-B information).
  repeated Motion motions = 2;
}
